Changes to gradle working, and JEI inclusion

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,11 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+#Mod Info
+mod_version=1.0.0
+
+#Dependencies
+forge_version=1.15.2-31.1.18
+mcp_version=20200219-1.15.1
+jei_version=1.15.2:6.0.0.2
