--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,9 @@ repositories {
         name = "ModMaven"
         url = "https://modmaven.k-4u.nl"
     }
+    flatDir {
+        dirs 'includedMods/'
+    }
 }
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
@@ -107,6 +110,9 @@ dependencies {
     //JEI
     compileOnly fg.deobf("mezz.jei:jei-${jei_version}:api")
     runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
+
+    runtimeOnly fg.deobf("ignored:buildinggadgets:3.3.0")
+    runtimeOnly fg.deobf("ignored:mininggadgets:1.3.1")
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
