--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,17 +1,18 @@
 modLoader="javafml"
 loaderVersion="[31,)"
-#issueTrackerURL="http://my.issue.tracker/"
+issueTrackerURL="https://github.com/Direwolf20-MC/ChargingGadgets/issues"
 
 [[mods]]
 modId="charginggadgets"
 version="${file.jarVersion}"
 displayName="Charging Gadgets"
-#updateJSONURL="http://myurl.me/"
-#displayURL="http://example.com/"
+updateJSONURL="https://raw.githubusercontent.com/Direwolf20-MC/ChargingGadgets/master/update.json"
+displayURL="https://github.com/Direwolf20-MC/ChargingGadgets"
 #logoFile="examplemod.png"
-credits="Thanks for this example mod goes to Java"
-authors="Love, Cheese and small house plants"
+credits="Direwolf20, ErrorMikey, Lex and the entire forge team."
+authors="Direwolf20, ErrorMikey"
 description='''
+    It's a gadget (or a block?) that charges things, what more could you ask for?
 '''
 
 [[dependencies.charginggadgets]]
