--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,10 @@ repositories {
     flatDir {
         dirs 'includedMods/'
     }
+    maven {
+        name = "CurseForge"
+        url = "https://minecraft.curseforge.com/api/maven/"
+    }
 }
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
@@ -112,7 +116,8 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
 
     runtimeOnly fg.deobf("ignored:buildinggadgets:3.3.2")
-    runtimeOnly fg.deobf("ignored:mininggadgets:1.3.1")
+    runtimeOnly fg.deobf("ignored:mininggadgets:1.3.0")
+    runtimeOnly fg.deobf("ignored:Mekanism-1.15.2:9.9.17.409")
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
