--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,6 +14,7 @@ authors="Direwolf20, ErrorMikey"
 description='''
     It's a gadget (or a block?) that charges things, what more could you ask for?
 '''
+license="MIT (https://github.com/Direwolf20-MC/ChargingGadgets/blob/master/LICENSE.md)"
 
 [[dependencies.charginggadgets]]
     modId="forge"
