--- a/build.gradle
+++ b/build.gradle
@@ -119,7 +119,7 @@ dependencies {
     runtimeOnly fg.deobf("mezz.jei:jei-${jei_version}")
 
 //    runtimeOnly fg.deobf("ignored:buildinggadgets:3.3.2")
-    runtimeOnly fg.deobf("ignored:mininggadgets:1.4.0")
+//    runtimeOnly fg.deobf("ignored:mininggadgets:1.4.0")
 //    runtimeOnly fg.deobf("ignored:Mekanism-1.15.2:9.9.17.409")
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
