feat: port to 1.17 :D

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 #Mod Info
-mod_version=1.3.0
+mod_version=1.4.0-beta
 #Dependencies
 forge_version=1.17.1-37.0.85
 mcp_version=1.17.1
