--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 #Mod Info
-mod_version=1.4.0-beta
+mod_version=1.5.0
+
 #Dependencies
-forge_version=1.17.1-37.0.85
-mcp_version=1.17.1
-jei_version=1.16.2:7.1.0.11
+forge_version=38.0.5
+minecraft_version=1.18
+jei_version=1.17.1:8.2.0.37
