Gradle and Toml Changes

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,14 @@ build
 # other
 eclipse
 run
+runs
+run-data
 
 # Files from Forge MDK
 forge*changelog.txt
 includedMods/
 
 .DS_Store
+
+# Extra Mods
+/extra-mods/
